up date index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Clone W3S</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1 class="bg-green-600 h-8 text-red-600">
-        test 1
-    </h1>
+    <nav class="flex h-[75px] bg-slate-600 justify-between pr-2 pl-2 items-center">
+        <div class="flex items-center">
+            <a href="#">
+                <img src="/src/img/logo.PNG" alt="">
+            </a>
+            <ul class="flex  content-center">
+                <li class="pr-2 pl-2 leading-75px hover:bg-green-400">Tutorials</li>
+                <li class="pr-2 pl-2 leading-75px hover:bg-green-400">References</li>
+                <li class="pr-2 pl-2 leading-75px hover:bg-green-400">Exercises</li>
+                <li class="pr-2 pl-2 leading-75px hover:bg-green-400">Bootcamp</li>
+                <li class="pr-2 pl-2 leading-75px  hover:bg-green-400">Videos</li>
+            </ul>
+        </div>
+        <div class="flex h-[43px] gap-4">
+            <a href="" class="justify-center block">Upgrade</a>
+            <a href="" class="block leading-[43px]" >Get Certified</a>
+            <a href="" class="block leading-[43px]" >Create Website</a>
+            <a href="" class="block leading-[43px]" >Sign Up</a>
+            <a href="" class="block leading-[43px]" >Log in</a>
+        </div>
+
+    </nav>
 </body>
+
 </html>
